fix(styles): fix Terminal__Header overflow

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -141,6 +141,8 @@
         font-size: theme('fontSize.sm');
         font-weight: bold;
         padding: theme('spacing.1') theme('spacing.2');
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     .Terminal__Body {
